--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ ENV/
 *.sqlite3
 *.log
 tempCodeRunnerFile.py
-
+models/
 
 # === Environment variables ===
 .env
@@ -29,6 +29,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# === OS files ===
+# === Others ===
 .DS_Store
 Thumbs.db
+qdrant_storage/
